// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Button Android should renders correctly 1`] = `
<DummyTouchableNativeFeedback
  disabled={false}
  onPress={[Function]}
>
  <Component
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(43, 187, 72)",
          "borderRadius": 5,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "marginVertical": 10,
          "width": "100%",
        },
        false,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      TEST
    </Text>
  </Component>
</DummyTouchableNativeFeedback>
`;

exports[`Components Button Android should renders correctly 2`] = `
<DummyTouchableNativeFeedback
  disabled={false}
  onPress={[Function]}
>
  <Component
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(43, 187, 72)",
          "borderRadius": 5,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "marginVertical": 10,
          "width": "100%",
        },
        false,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      QDWDQW
    </Text>
  </Component>
</DummyTouchableNativeFeedback>
`;

exports[`Components Button Android should renders correctly 3`] = `
<DummyTouchableNativeFeedback
  disabled={false}
  onPress={[Function]}
>
  <Component
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(43, 187, 72)",
          "borderRadius": 5,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "marginVertical": 10,
          "width": "100%",
        },
        false,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      QDWDQW
    </Text>
    <ActivityIndicator
      animating={true}
      color="#ffffff"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "marginLeft": 10,
        }
      }
    />
  </Component>
</DummyTouchableNativeFeedback>
`;

exports[`Components Button Android should renders correctly 4`] = `
<DummyTouchableNativeFeedback
  disabled={true}
  onPress={[Function]}
>
  <Component
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(43, 187, 72)",
          "borderRadius": 5,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "marginVertical": 10,
          "width": "100%",
        },
        Object {
          "backgroundColor": "rgba(43, 187, 72, 0.4)",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      QDWDQW
    </Text>
  </Component>
</DummyTouchableNativeFeedback>
`;
